--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
     </button>
 
 </div>
+
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script src="wewillrockyou.js"></script>
 
 </body>
